fix:#61 catalog overflow

--- a/source/css/_partial/catalog.styl
+++ b/source/css/_partial/catalog.styl
@@ -31,6 +31,10 @@
     .toc-nav
       padding: 0
       margin-top: 1em
+      overflow-y: scroll
+      max-height: 480px
+      &::-webkit-scrollbar
+        display: none
     ol
       padding-left: 20px
     li
